create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2812,6 +2812,19 @@ a {
   height: 2px;
   margin: 0 auto;
 }
+.cid-sBLRhVoIxg {
+  padding-top: 2rem;
+  padding-bottom: 0rem;
+  background-color: #ff6666;
+}
+.cid-sBLRhVoIxg .mbr-section-title {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-sBLRhVoIxg .mbr-text,
+.cid-sBLRhVoIxg .mbr-section-btn {
+  color: #ffffff;
+}
 .cid-szqeeflIQP {
   z-index: 1000;
   width: 100%;
